--- a/packages/ui/src/styles/tailwind.css
+++ b/packages/ui/src/styles/tailwind.css
@@ -1,3 +1,4 @@
 @import "tailwindcss/theme";
 @import "tailwindcss/utilities";
-@source "../**/*.{ts,tsx}";
+@import "tailwindcss/preflight.css";
+/* @source "..*.{ts,tsx}"; */
